--- a/article/inputs/macros.sty
+++ b/article/inputs/macros.sty
@@ -88,3 +88,6 @@
 
 %% wjd: can we use n underbar for the set {0,1,...,n-1}?
 \newcommand{\nn}{\ensuremath{\underline{n}}}
+
+%% wjd: can we surround GAP code with \code{ } to make it small typewriter font?
+\newcommand{\code}[1]{{\small {\tt #1}}}
